Update gems for new year

--- a/ruby/Gemfile
+++ b/ruby/Gemfile
@@ -5,5 +5,6 @@ source "https://rubygems.org"
 git_source(:github) {|repo_name| "https://github.com/#{repo_name}" }
 
 gem "aoc_rb"
+gem "benchmark"
 gem "pry"
 gem "stringio"
